--- a/src/index.html
+++ b/src/index.html
@@ -186,5 +186,6 @@
     tick();
     setInterval(tick, 1000);
   </script>
+  <p><a href="pengworm.joe-land.win">Please click me caitlyn!</a></p>
 </body>
 </html>
